# MyScript

./: .gitignore  CMakeLists.txt
include/myscript/: myscript.hpp
src/: myscript.cpp
test/: test.cpp
